# ai_girls

./: .env  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  run.py  setup_ollama.py
app/ai/: ollama_service.py  service.py
app/billing/: service.py
app/core/: config.py  database.py  init_data.py
app/migrations/: env.py
app/migrations/versions/: 1ec16db68510_initial.py
app/models/: database.py
app/telegram/: bot.py
app/web/routes/: __init__.py  api.py  billing_api.py  ollama_api.py  web.py
app/web/templates/: base.html  characters.html  chat.html  index.html  ollama.html  premium.html  profile.html
