[project]
name = "aig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aiogram>=3.0.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ollama>=0.5.3",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "openai>=1.102.0",
    "anthropic>=0.64.0",
    "stripe>=12.5.0",
    "jinja2>=3.1.6",
    "alembic>=1.16.5",
    "requests>=2.31.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
]
